update swagger functions
