# app/Http/Requests/Arendators/StoreRequest.php
@@ -1,32 +1,0 @@
-<?php
-
-namespace App\Http\Requests\Arendators;
-
-use Illuminate\Foundation\Http\FormRequest;
-
-class StoreRequest extends FormRequest
-{
-    /**
-     * Determine if the user is authorized to make this request.
-     */
-    public function authorize(): bool
-    {
-        return true;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
-     */
-    public function rules(): array
-    {
-        return [
-            'name' => 'required|string',
-            'history_operations' => 'required|string',
-            'history_arends' => 'required|string',
-            'money' => 'required|decimal',
-            'status' => 'required|string'
-        ];
-    }
-}
