# app/Http/Resources/Users/UsersResource.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Http\Resources\Users;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class UsersResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'email' => $this->email,
+            'password' => $this->password,
+            'car' => $this->car
+        ];
+    }
+}
